--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <style>
   body { background-color: #111; color: #f5f5f5; }
   a { color: #f00; }
+  /* Custom font for header */
+  .header-title { font-family: 'Arial', sans-serif; font-weight: 700; }
 </style>
 </head>
 <body class="font-sans">
@@ -16,8 +18,8 @@
 <header class="bg-black p-6 flex justify-between items-center">
   <div class="flex items-center gap-4">
     <!-- Logo image -->
-    <img src="adcc.png" alt="ADCC Georgia Logo" width="100">
-    <h1 class="text-2xl font-bold text-red-600">ADCC Georgia</h1>
+    <img src="adcc.png" alt="ADCC Georgia Logo" width="80">
+    <h1 class="text-xl header-title text-red-600">ADCC Georgia</h1>
   </div>
   <nav class="flex gap-4">
     <a href="#about" class="hover:underline">About</a>
@@ -59,8 +61,9 @@ setInterval(() => {
   <h3 class="text-3xl font-bold text-red-600 mb-4">Upcoming Event</h3>
   <p><strong>Date:</strong> October 12, 2025</p>
   <p><strong>Venue:</strong> Rustavi Sports Palace, Rustavi, Georgia</p>
-  <p class="mt-2">To register, email: <a href="mailto:adccgeorgia@gmail.com">adccgeorgia@gmail.com</a></p>
+  <p class="mt-2">Reach us, email: <a href="mailto:adccgeorgia@gmail.com">adccgeorgia@gmail.com</a></p>
   <div class="mt-4 flex gap-4">
+    <a href="https://smoothcomp.com/en/event/24202" target="_blank" class="px-4 py-2 bg-red-600 rounded">Register</a>
     <a href="https://instagram.com/adccgeorgia" target="_blank" class="px-4 py-2 bg-red-600 rounded">Instagram</a>
     <a href="https://fb.com/adccgeorgia" target="_blank" class="px-4 py-2 bg-red-600 rounded">Facebook</a>
   </div>
