--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 <style>
   body { background-color: #111; color: #f5f5f5; }
   a { color: #f00; }
-  /* Custom font for header */
   .header-title { font-family: 'Arial', sans-serif; font-weight: 700; }
+  .hero {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
 </style>
 </head>
 <body class="font-sans">
@@ -28,8 +32,8 @@
   </nav>
 </header>
 
-<!-- Hero Section with Countdown -->
-<section class="text-center p-12">
+<!-- Hero Section with Countdown and cover image -->
+<section class="text-center p-12 hero" style="background-image: url('main.png');">
   <h2 class="text-4xl font-bold text-red-600 mb-4">ADCC Georgia Official Event</h2>
   <p class="mb-6">October 12, 2025 · Rustavi Sports Palace, Rustavi, Georgia</p>
   <div id="countdown" class="text-3xl font-semibold text-white"></div>
@@ -73,9 +77,9 @@ setInterval(() => {
 <section id="gallery" class="p-12 max-w-4xl mx-auto">
   <h3 class="text-3xl font-bold text-red-600 mb-4">Gallery</h3>
   <div class="grid sm:grid-cols-3 gap-4">
-    <div class="bg-gray-700 h-48 flex items-center justify-center">Photo 1</div>
-    <div class="bg-gray-700 h-48 flex items-center justify-center">Photo 2</div>
-    <div class="bg-gray-700 h-48 flex items-center justify-center">Photo 3</div>
+    <img src="one.png" alt="Gallery Photo 1" class="h-48 w-full object-cover rounded">
+    <img src="two.png" alt="Gallery Photo 2" class="h-48 w-full object-cover rounded">
+    <img src="three.png" alt="Gallery Photo 3" class="h-48 w-full object-cover rounded">
   </div>
 </section>
 
