--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
   body { background-color: #111; color: #f5f5f5; }
   a { color: #f00; }
   .header-title { font-family: 'Arial', sans-serif; font-weight: 700; }
-  .hero {
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
 </style>
 </head>
 <body class="font-sans">
@@ -21,7 +16,6 @@
 <!-- Header -->
 <header class="bg-black p-6 flex justify-between items-center">
   <div class="flex items-center gap-4">
-    <!-- Logo image -->
     <img src="adcc.png" alt="ADCC Georgia Logo" width="80">
     <h1 class="text-xl header-title text-red-600">ADCC Georgia</h1>
   </div>
@@ -32,11 +26,14 @@
   </nav>
 </header>
 
-<!-- Hero Section with Countdown and cover image -->
-<section class="text-center p-12 hero" style="background-image: url('main.png');">
-  <h2 class="text-4xl font-bold text-red-600 mb-4">ADCC Georgia Official Event</h2>
-  <p class="mb-6">October 12, 2025 · Rustavi Sports Palace, Rustavi, Georgia</p>
-  <div id="countdown" class="text-3xl font-semibold text-white"></div>
+<!-- Hero Section with Poster and Countdown -->
+<section class="text-center p-12 flex flex-col items-center gap-6">
+  <!-- Poster image -->
+  <img src="main.png" alt="ADCC Georgia Event Poster" class="max-w-full h-auto rounded-lg shadow-lg">
+
+  <h2 class="text-3xl sm:text-5xl font-bold text-red-600 mt-4">ADCC Georgia Official Event</h2>
+  <p class="mb-4 text-white text-lg sm:text-xl">October 12, 2025 · Rustavi Sports Palace, Rustavi, Georgia</p>
+  <div id="countdown" class="text-2xl sm:text-3xl font-semibold text-white"></div>
 </section>
 
 <script>
@@ -66,7 +63,7 @@ setInterval(() => {
   <p><strong>Date:</strong> October 12, 2025</p>
   <p><strong>Venue:</strong> Rustavi Sports Palace, Rustavi, Georgia</p>
   <p class="mt-2">Reach us, email: <a href="mailto:adccgeorgia@gmail.com">adccgeorgia@gmail.com</a></p>
-  <div class="mt-4 flex gap-4">
+  <div class="mt-4 flex gap-4 flex-wrap">
     <a href="https://smoothcomp.com/en/event/24202" target="_blank" class="px-4 py-2 bg-red-600 rounded">Register</a>
     <a href="https://instagram.com/adccgeorgia" target="_blank" class="px-4 py-2 bg-red-600 rounded">Instagram</a>
     <a href="https://fb.com/adccgeorgia" target="_blank" class="px-4 py-2 bg-red-600 rounded">Facebook</a>
