--- a/index.html
+++ b/index.html
@@ -9,20 +9,6 @@
   body { background-color: #111; color: #f5f5f5; }
   a { color: #f00; }
   .header-title { font-family: 'Arial', sans-serif; font-weight: 700; }
-  .hero {
-    background-image: url('main.png');
-    background-size: contain; /* Keeps poster proportions */
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 400px; /* Default height */
-    max-height: 80vh; /* Avoid being too tall on big screens */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 1.5rem;
-  }
 </style>
 </head>
 <body class="font-sans">
@@ -40,11 +26,10 @@
   </nav>
 </header>
 
-<!-- Hero Section with Poster Background and Countdown -->
-<section class="hero">
-  <h2 class="text-3xl sm:text-5xl font-bold text-red-600 mb-2">ADCC Georgia Official Event</h2>
-  <p class="mb-2 text-white text-lg sm:text-xl">October 12, 2025 · Rustavi Sports Palace, Rustavi, Georgia</p>
+<!-- Countdown & Register Section -->
+<section class="text-center p-12 flex flex-col sm:flex-row justify-center items-center gap-6">
   <div id="countdown" class="text-2xl sm:text-3xl font-semibold text-white"></div>
+  <a href="https://smoothcomp.com/en/event/24202" target="_blank" class="px-4 py-2 bg-red-600 rounded text-white font-bold">Register Now</a>
 </section>
 
 <script>
@@ -75,7 +60,6 @@ setInterval(() => {
   <p><strong>Venue:</strong> Rustavi Sports Palace, Rustavi, Georgia</p>
   <p class="mt-2">Reach us, email: <a href="mailto:adccgeorgia@gmail.com">adccgeorgia@gmail.com</a></p>
   <div class="mt-4 flex gap-4 flex-wrap">
-    <a href="https://smoothcomp.com/en/event/24202" target="_blank" class="px-4 py-2 bg-red-600 rounded">Register</a>
     <a href="https://instagram.com/adccgeorgia" target="_blank" class="px-4 py-2 bg-red-600 rounded">Instagram</a>
     <a href="https://fb.com/adccgeorgia" target="_blank" class="px-4 py-2 bg-red-600 rounded">Facebook</a>
   </div>
@@ -106,4 +90,3 @@ setInterval(() => {
 
 </body>
 </html>
-
