--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ setInterval(() => {
 <!-- About Section -->
 <section id="about" class="p-12 max-w-4xl mx-auto">
   <h3 class="text-3xl font-bold text-red-600 mb-4">About ADCC Georgia</h3>
-  <p>ADCC Georgia organizes high-quality grappling tournaments in Georgia. We follow ADCC-style rules, support athletes, and create fair competition for all skill levels.</p>
+  <p>This is the official ADCC Georgia, organizing high-level grappling tournaments in Georgia. We follow official ADCC rules, support athletes, and provide fair competition for all skill levels.</p>
 </section>
 
 <!-- Event Section -->
