--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <!-- Hero / Countdown Section -->
 <section class="text-center p-12">
-  <h2 class="text-4xl font-bold text-red-600 mb-4">ADCC Georgia Official Event</h2>
+  <h2 class="text-4xl font-bold text-red-600 mb-4">ADCC Georgia Open Official Event</h2>
   <p class="mb-6 text-xl">October 12, 2025 · Rustavi Sports Palace, Rustavi, Georgia</p>
   <div id="countdown" class="text-3xl font-semibold text-white mb-4"></div>
   <a href="https://smoothcomp.com/en/event/24202" target="_blank" class="btn inline-block px-6 py-3 bg-red-600 text-white rounded font-bold transition-transform">Register Now</a>
@@ -74,7 +74,7 @@ setInterval(() => {
 <section id="event" class="p-12 max-w-4xl mx-auto bg-gray-900 rounded-lg my-6">
   <h3 class="text-3xl font-bold text-red-600 mb-4">Upcoming Event</h3>
   <p><strong>Date:</strong> October 12, 2025</p>
-  <p><strong>Venue:</strong> Rustavi Sports Palace, Rustavi, Georgia</p>
+  <p><strong>Location:</strong> <a href="https://maps.app.goo.gl/gDBiM75Gd4j2dBLm9" target="_blank" class="text-red-600 hover:underline">Rustavi Sports Palace, Rustavi, Georgia</a></p>
 </section>
 
 <!-- Gallery Section -->
