--- a/index.html
+++ b/index.html
@@ -41,12 +41,18 @@
   </nav>
 </header>
 
-<!-- Hero / Countdown Section -->
-<section class="text-center p-12">
-  <h2 class="text-4xl font-bold text-red-600 mb-4">ADCC Georgia Open Official Event</h2>
-  <p class="mb-6 text-xl">October 12, 2025 · Rustavi Sports Palace, Rustavi, Georgia</p>
-  <div id="countdown" class="text-3xl font-semibold text-white mb-4"></div>
-  <a href="https://smoothcomp.com/en/event/24202" target="_blank" class="btn inline-block px-6 py-3 bg-red-600 text-white rounded font-bold transition-transform">Register Now</a>
+<!-- Hero / Countdown Section with poster -->
+<section class="relative text-center p-12">
+  <div class="absolute inset-0">
+    <img src="main.png" alt="Event Poster" class="w-full h-full object-cover">
+    <div class="absolute inset-0 bg-black opacity-50"></div> <!-- dark overlay -->
+  </div>
+  <div class="relative z-10">
+    <h2 class="text-4xl font-bold text-red-600 mb-4">ADCC Georgia Official Event</h2>
+    <p class="mb-6 text-xl text-white">October 12, 2025 · Rustavi Sports Palace, Rustavi, Georgia</p>
+    <div id="countdown" class="text-3xl font-semibold text-white mb-4"></div>
+    <a href="https://smoothcomp.com/en/event/24202" target="_blank" class="btn inline-block px-6 py-3 bg-red-600 text-white rounded font-bold transition-transform">Register Now</a>
+  </div>
 </section>
 
 <script>
@@ -109,4 +115,3 @@ setInterval(() => {
 
 </body>
 </html>
-
