--- a/index.html
+++ b/index.html
@@ -6,59 +6,38 @@
 <title>ADCC Georgia</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Russo+One&display=swap');
-
-  body { 
-    background-color: #111; 
-    color: #f5f5f5; 
-    font-family: 'Arial', sans-serif;
-  }
+  body { background-color: #111; color: #f5f5f5; font-family: 'Arial', sans-serif; }
   a { color: #f00; }
-  html { scroll-behavior: smooth; }
-
-  /* Countdown */
-  #countdown { font-family: 'Orbitron', sans-serif; letter-spacing: 2px; }
-
-  /* Hero heading */
-  .hero-title {
-    font-family: 'Russo One', sans-serif;
-    text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+  .event-title {
+    font-family: 'Impact', 'Arial Black', sans-serif;
+    text-transform: uppercase;
+    text-shadow: 2px 2px 8px #000;
+    letter-spacing: 1px;
   }
-
-  /* Buttons hover effect */
-  .btn:hover { transform: scale(1.05); box-shadow: 0 4px 10px rgba(255,0,0,0.5); }
-
-  /* Gallery hover */
-  .gallery-img:hover { transform: scale(1.05); box-shadow: 0 4px 15px rgba(0,0,0,0.7); }
 </style>
 </head>
 <body class="font-sans">
 
 <!-- Header -->
-<header class="bg-black p-6 flex justify-between items-center shadow-md">
+<header class="bg-black p-6 flex justify-between items-center">
   <div class="flex items-center gap-4">
-    <img src="adcc.png" alt="ADCC Georgia Logo" width="80">
-    <h1 class="text-xl font-bold text-red-600 tracking-wide">ADCC Georgia</h1>
+    <img src="adcc.png" alt="ADCC Georgia Logo" width="120" class="rounded">
+    <h1 class="text-2xl font-bold text-red-600">ADCC Georgia</h1>
   </div>
   <nav class="flex gap-4">
     <a href="#about" class="hover:underline">About</a>
     <a href="#event" class="hover:underline">Event</a>
+    <a href="#results" class="hover:underline">Results</a>
     <a href="#contact" class="hover:underline">Contact</a>
   </nav>
 </header>
 
-<!-- Hero / Countdown Section with poster -->
-<section class="relative text-center p-12">
-  <div class="absolute inset-0">
-    <img src="main.png" alt="Event Poster" class="w-full h-full object-cover">
-    <div class="absolute inset-0 bg-black opacity-50"></div> <!-- dark overlay -->
-  </div>
-  <div class="relative z-10">
-    <h2 class="hero-title text-4xl md:text-5xl font-bold text-red-500 mb-4">ADCC Georgia Open Official Event</h2>
-    <p class="mb-6 text-xl text-white">October 12, 2025 · Rustavi Sports Palace, Rustavi, Georgia</p>
-    <div id="countdown" class="text-3xl font-semibold text-white mb-4"></div>
-    <a href="https://smoothcomp.com/en/event/24202" target="_blank" class="btn inline-block px-6 py-3 bg-red-600 text-white rounded font-bold transition-transform">Register Now</a>
-  </div>
+<!-- Hero Section with Countdown -->
+<section class="text-center p-12 bg-cover bg-center" style="background-image: url('main.png');">
+  <h2 class="text-4xl font-bold text-red-600 mb-4 event-title">ADCC Georgia Open Official Event</h2>
+  <p class="mb-6 text-lg">October 12, 2025 · Rustavi Sports Palace, Rustavi, Georgia</p>
+  <div id="countdown" class="text-3xl font-semibold text-white mb-6"></div>
+  <a href="https://smoothcomp.com/en/event/24202" target="_blank" class="px-6 py-3 bg-red-600 rounded text-white font-bold hover:bg-red-700">Register on Smoothcomp</a>
 </section>
 
 <script>
@@ -82,41 +61,45 @@ setInterval(() => {
   <p>This is the official ADCC Georgia, organizing high-level grappling tournaments in Georgia. We follow official ADCC rules, support athletes, and provide fair competition for all skill levels.</p>
 </section>
 
-<!-- Upcoming Event Section -->
+<!-- Event Section -->
 <section id="event" class="p-12 max-w-4xl mx-auto bg-gray-900 rounded-lg my-6">
   <h3 class="text-3xl font-bold text-red-600 mb-4">Upcoming Event</h3>
   <p><strong>Date:</strong> October 12, 2025</p>
-  <p><strong>Location:</strong> <a href="https://maps.app.goo.gl/gDBiM75Gd4j2dBLm9" target="_blank" class="text-red-600 hover:underline">Rustavi Sports Palace, Rustavi, Georgia</a></p>
+  <p><strong>Venue:</strong> Rustavi Sports Palace, Rustavi, Georgia</p>
+  <p class="mt-2"><a href="https://maps.app.goo.gl/gDBiM75Gd4j2dBLm9" target="_blank" class="text-red-400 hover:underline">📍 View on Google Maps</a></p>
+</section>
+
+<!-- Results Section -->
+<section id="results" class="p-12 max-w-4xl mx-auto bg-gray-800 rounded-lg my-6">
+  <h3 class="text-3xl font-bold text-red-600 mb-4">Results</h3>
+  <p>Check official results from the ADCC Georgia Open 2025 below:</p>
+  <a href="https://adcombat.com/adcc-events/adcc-georgia-open-2025/" target="_blank" class="inline-block mt-4 px-6 py-3 bg-red-600 text-white font-bold rounded hover:bg-red-700">View Results</a>
 </section>
 
 <!-- Gallery Section -->
 <section id="gallery" class="p-12 max-w-4xl mx-auto">
   <h3 class="text-3xl font-bold text-red-600 mb-4">Gallery</h3>
   <div class="grid sm:grid-cols-3 gap-4">
-    <img src="one.png" alt="Photo 1" class="gallery-img h-48 w-full object-cover rounded transition-transform">
-    <img src="two.png" alt="Photo 2" class="gallery-img h-48 w-full object-cover rounded transition-transform">
-    <img src="three.png" alt="Photo 3" class="gallery-img h-48 w-full object-cover rounded transition-transform">
+    <img src="one.png" alt="Gallery Photo 1" class="rounded shadow-lg">
+    <img src="two.png" alt="Gallery Photo 2" class="rounded shadow-lg">
+    <img src="three.png" alt="Gallery Photo 3" class="rounded shadow-lg">
   </div>
 </section>
 
 <!-- Contact Section -->
 <section id="contact" class="p-12 max-w-4xl mx-auto bg-gray-900 rounded-lg my-6">
   <h3 class="text-3xl font-bold text-red-600 mb-4">Contact</h3>
-  <p>Email: <a href="mailto:adccgeorgia@gmail.com" class="text-red-600 hover:underline">adccgeorgia@gmail.com</a></p>
+  <p class="mb-4">For any inquiries or partnership opportunities, reach us at:</p>
+  <p>Email: <a href="mailto:adccgeorgia@gmail.com" class="text-red-400 hover:underline">adccgeorgia@gmail.com</a></p>
   <div class="mt-4 flex gap-4">
-    <a href="https://instagram.com/adccgeorgia" target="_blank" class="btn px-4 py-2 bg-red-600 rounded text-white font-semibold transition-transform">Instagram</a>
-    <a href="https://fb.com/adccgeorgia" target="_blank" class="btn px-4 py-2 bg-red-600 rounded text-white font-semibold transition-transform">Facebook</a>
+    <a href="https://instagram.com/adccgeorgia" target="_blank" class="px-4 py-2 bg-red-600 rounded hover:bg-red-700">Instagram</a>
+    <a href="https://fb.com/adccgeorgia" target="_blank" class="px-4 py-2 bg-red-600 rounded hover:bg-red-700">Facebook</a>
   </div>
 </section>
 
 <!-- Footer -->
 <footer class="p-6 text-center text-gray-400">
   © 2025 ADCC Georgia — All rights reserved.
-  <div class="mt-2 flex justify-center gap-4 text-sm">
-    <a href="https://instagram.com/adccgeorgia" target="_blank" class="hover:underline">Instagram</a>
-    <a href="https://fb.com/adccgeorgia" target="_blank" class="hover:underline">Facebook</a>
-    <a href="mailto:adccgeorgia@gmail.com" class="hover:underline">Email</a>
-  </div>
 </footer>
 
 </body>
