--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ADCC Georgia</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
   body { background-color: #111; color: #f5f5f5; font-family: 'Arial', sans-serif; }
@@ -21,7 +22,6 @@
 <header class="bg-black p-6 flex justify-between items-center">
   <div class="flex items-center gap-4">
     <img src="adcc.png" alt="ADCC Georgia Logo" width="120" class="rounded">
-    <h1 class="text-2xl font-bold text-red-600">ADCC Georgia</h1>
   </div>
   <nav class="flex gap-4">
     <a href="#about" class="hover:underline">About</a>
